<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".DiceRollActivity" >
    
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="vertical">
        
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
	        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight=".25"
	        android:text="@string/tableHeader_number"/>
	        
	        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight=".25"
	        android:text="@string/tableHeader_type" />
	        
	        <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight=".25"
	        android:text="@string/tableHeader_modifier" />
	        
	        <!--<TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_weight=".25"
	        android:text="@string/tableHeader_total" />-->
        </TableRow>
        
        <TableRow 
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/diceNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:inputType="numberDecimal|none" />
            
            <Spinner
                android:id="@+id/diceType"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:entries="@array/dice_array" />
            
            <EditText
                android:id="@+id/diceMod"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".25"
                android:inputType="numberDecimal|none"/>
            
        </TableRow>
    </TableLayout>
    
    <TextView
        android:id="@+id/diceTotal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:textSize="150dp" />
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".333"
            android:text="@string/roll_button"
            android:onClick="rollDice"/>
        
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight=".333"
            android:text="@string/roll_reset"/>
        
    </LinearLayout>
</LinearLayout>